--- a/index.html
+++ b/index.html
@@ -52,24 +52,16 @@ My name is rummubeats. I am a 23 year old artist from Denver, who is mainly focu
 
 <br>
 <a href="https://discord.gg/Gp2KFAKAAB">Discord Server</a>
-
 <br>
+<br>
+
 Mail: rummubeats@hotmail.com
 <br>
-
-<pre>
------------------------------------------------------------------------------
-</pre>
-
-You can buy my digital products here:
 <br>
-<br>
-<a href="https://rummubeats.sellpass.io/products/test">Beats</a><br><br>
-<a href="https://rummubeats.sellpass.io/products/test">Drumkits</a><br>
-<a href="https://rummubeats.sellpass.io/products/test">Presets</a><br>
-<a href="https://rummubeats.sellpass.io/products/test">Projects</a><br>
-<a href="https://rummubeats.sellpass.io/products/test">Midi Chords</a><br>
 
+<a href="https://rummubeats.sellpass.io/products/test">Drum Kits</a>
+
+<br>
 
 <pre>
 -----------------------------------------------------------------------------
@@ -101,9 +93,10 @@ Thanks, much appreciated.<br> ☁ ▅▒░☼‿☼░▒▅ ☁
 </pre>
 
 <br> 
-be sure to check out our Forums
+be sure to check out our Forums, to stay updated about recent beat battles, user created content and<br>our community driven gaming network that hosts gaming events every few weeks<br>
 <br>
 <a href="https://notfunctionala.2ix.de">notfunctional Forums</a>
+<br>
 <div>
 <pre>
 greetings,
