--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ My name is rummubeats. I am a 23 year old artist from Denver, who is mainly focu
 <a href="https://www.instagram.com/rummubeats/">Instagram</a>
 
 <br>
-<a href="https://discord.gg/kQTyfYU4">Discord Server</a>
+<a href="https://discord.gg/pdwEFNMS">Discord Server</a>
 <br>
 <br>
 
